# gish

./: .gitignore  CMakeLists.txt  HOWTOcompile.markdown  License.txt  Makefile  Makefile.linux  README.markdown  config.h  freegish.6  gish.sln  gish.vcproj  gish.vcxproj  gish.vcxproj.filters  gishleveltool.bat  main.c  main.h  rename-levels.sh
Gish.xcodeproj/: project.pbxproj
animation/: aibsta01.tga  altatk02.tga  baswlk07.tga  bibatk01.tga  frkhed05.tga  frkwlk04.tga  mumatk01.tga  nibsta05.tga  sepdie09.tga
audio/: audio.c  audio.h
cmake-extras/: FindVorbis.cmake
game/: ai.c  ai.h  animation.c  animation.h  audio.c  audio.h  block.c  block.h  boss.c  boss.h  config.c  config.h  credits.c  credits.h  custom.c  custom.h  damage.c  damage.h  debug.c  debug.h  editor.c  editor.h  english.h  game.c  game.h  gameaudio.h  gamemenu.c  gamemenu.h  gameobject.c  gameobject.h  gametexture.c  gametexture.h  glext.c  glext.h  high.c  high.h  level.c  level.h  lighting.c  lighting.h  (+46 more)
icons/: freegish.desktop  freegish.xpm
input/: joystick.c  joystick.h  keyboard.c  keyboard.h  mouse.c  mouse.h
level/: 2collection1.lvl  2collection2.lvl  2collection3.lvl  2dragster1.lvl  2dragster2.lvl  2duel1.lvl  2duel2.lvl  2football1.lvl  2greed1.lvl  2sumo1.lvl  2sumo2.lvl  License.txt  co01.lvl  co02.lvl  duel2.lvl  freegish.lvl  freegish4.lvl  freegish_lvl.txt  sewer1.lvl  sewer1_lvl.txt  sewer2.lvl  sewer2_lvl.txt  sewer3.lvl  sewer3_lvl.txt  sewer4.lvl  sewer4_lvl.txt  sewer5.lvl  sewer5_lvl.txt  sewer6.lvl  sewer7.lvl  sumo2.lvl
level/backup/: 2dragster1.lvl  2duel1.lvl  freegish.lvl  sewer1.lvl
math/: intersec.c  intersec.h  vector.c  vector.h
menu/: menu.c  menu.h
music/: License.txt
parser/: parser.c  parser.h
physics/: bond.c  bond.h  object.c  object.h  particle.c  particle.h
sdl/: endian.c  endian.h  event.c  event.h  file.c  file.h  sdl.h  video.c  video.h
src/: CMakeLists.txt  config.h  main.c
src/audio/: audio.c
src/game/: ai.c  animation.c  animation.h  block.c  block.h  boss.h  config.c  config.h  credits.c  credits.h  custom.c  custom.h  damage.h  debug.h  editor.h  english.h  game.c  game.h  gameaudio.c  gamemenu.c  gamemenu.h  gameobject.c  gameobject.h  gametexture.c  high.c  level.h  lighting.c  lighting.h  logic.c  mainmenu.c  mappack.c  music.h  objedit.c  objfunc.c  objfunc.h  prerender.c  prerender.h  random.c  record.h  render.c  (+7 more)
src/input/: joystick.c  keyboard.c  keyboard.h  mouse.h
src/math/: intersec.h  math.h  vector.c
src/menu/: menu.c  menu.h
src/parser/: parser.c  parser.h
src/physics/: bond.c  object.c  particle.c  particle.h
src/sdl/: endian.c  endian.h  event.c  event.h  file.c  video.c  video.h
src/video/: glext.h  glfunc.h  opengl.c  opengl.h  text.c
texture/: 0.tga  1.tga  10.tga  11.tga  12.tga  2.tga  3.tga  4.tga  5.tga  6.tga  7.tga  8.tga  9.tga  amber.tga  amber1.tga  amber2.tga  amber3.tga  bfacem1.tga  bfacem4.tga  blank.tga  blood.tga  border.tga  btar.tga  bubble.tga  chain.tga  complete.tga  congrats.tga  crypticsea.tga  dust.tga  faceb2.tga  faceh2.tga  faceh3.tga  facem2.tga  field.tga  fight.tga  font00.tga  gameover.tga  gfaceh01.tga  gfacem3.tga  gishhud.tga  (+59 more)
texture/md5dbs/: basics_selfref.md5db  root_selfref.md5db  trak3_5.md5db  trak3_selfref.md5db  trak5_selfref.md5db
texture/trak3/: textureset_trak3_readme.txt
texture/trak5/: textureset_trak5_readme.txt
texturesets/: texturesets_howto.txt
texturesets/trak3/texture/: text002.tga  text003.tga  text004.tga  text005.tga  text006.tga  text007.tga  text008.tga  text009.tga  text010.tga  text011.tga  text012.tga  text013.tga  text014.tga  text015.tga  text016.tga  text017.tga  text018.tga  text019.tga  text020.tga  text021.tga  text022.tga  text023.tga  text024.tga  text025.tga  text026.tga
texturesets/trak5/texture/: text022.tga  text023.tga  text024.tga  text025.tga  text026.tga  text027.tga  text028.tga  text029.tga  text030.tga  text031.tga  text032.tga  text033.tga  text034.tga  text035.tga
tile01/texture/: text006.tga  text010.tga  text013.tga  text138.tga
tile02/texture/: text015.tga  text021.tga
tile03/texture/: text012.tga
tools/gishleveltool/: LICENSE.TXT
tools/gishleveltool/src/: Gishlevel.java  Main.java
tools/gishleveltool/src/gishleveltool/: FileRecursion.java  FileTree.java  Gishlevel.java  ImagePanel.java  Leveltoolkit.java  MD5db.java  MD5dbmaker.form  MD5dbmaker.java  Main.java  Tile.java
video/: glext.h  glfunc.c  glfunc.h  opengl.h  text.c  text.h  texture.c  texture.h
